@@ -6464,12 +6464,13 @@ sub parseMsg {
 			debug "Player Info: $players{$ID}{'name'} ($binID)\n", "parseMsg_presence", 2;
 		}
 		if (%{$monsters{$ID}}) {
-			($monsters{$ID}{'name'}) = substr($msg, 6, 24) =~ /([\s\S]*?)\000/;
+			my $name = substr($msg, 6, 24) =~ /([\s\S]*?)\000/;
 			if ($config{'debug'} >= 2) {
 				$binID = binFind(\@monstersID, $ID);
-				debug "Monster Info: $monsters{$ID}{'name'} ($binID)\n", "parseMsg", 2;
+				debug "Monster Info: $name ($binID)\n", "parseMsg", 2;
 			}
 			if ($monsters_lut{$monsters{$ID}{'nameID'}} eq "") {
+				$monsters{$ID}{'name'} = $name;
 				$monsters_lut{$monsters{$ID}{'nameID'}} = $monsters{$ID}{'name'};
 				updateMonsterLUT("$Settings::tables_folder/monsters.txt", $monsters{$ID}{'nameID'}, $monsters{$ID}{'name'});
 			}
